# Vexis

./: .env.example  .gitignore  README.md  ROADMAP.md  docker-compose.yml  next.config.mjs  package-lock.json  package-lock.root.json  package.json  tsconfig.json
AI/TwitterAI/: .env.example  .gitignore  ARCHITECTURE.md  config.py  docker-compose.yml  log_buffer.py  pyproject.toml  requirements.txt
AI/TwitterAI/api/: main.py
AI/TwitterAI/db/: connection.py  migrate_drop_index_tickers.sql  migrate_horizons.sql  migrate_model_preds.sql  models.py  schema.sql
AI/TwitterAI/inference/: heuristic.py  model.py
AI/TwitterAI/jobs/: outcomes.py  recompute.py  run_once.py  scheduler.py
AI/TwitterAI/models/: latest.txt  twitterai_direction_v1_meta.json
AI/TwitterAI/pipeline/: alias_dictionary.py  asset_matching.py  deduper.py  feature_scoring.py  labeling.py  match_filter.py  qqq_ingest_profile.py  qqq_signal.py
AI/TwitterAI/prices/: alpaca_bars.py
AI/TwitterAI/scrapers/: apify_twitter.py  ingest.py  normalizer.py  twitterapiio.py
AI/TwitterAI/scripts/: summarize_scrape.py
AI/TwitterAI/train/: export.py  features.py  train.py
ai/newsai/: docker-compose.yml  pyproject.toml
ai/newsai/newsai/: config.py
ai/newsai/newsai/api/: main.py
ai/newsai/newsai/dashboard/: app.py
ai/newsai/newsai/db/: __init__.py  connection.py  ingest.py  schema.sql
ai/newsai/newsai/inference/: __init__.py
ai/newsai/newsai/jobs/: run_once.py  scheduler.py
ai/newsai/newsai/pipeline/: __init__.py  filters.py  timestamp_matcher.py
ai/newsai/newsai/prices/: __init__.py  (+1 more)
(+185 files in other folders)
