[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "twitterai"
version = "0.1.0"
description = "Twitter/X ingestion + market-reaction labeling pipeline"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
