[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "newsai"
version = "0.1.0"
description = "QQQ News Impact MVP — pipeline, labeling, inference API"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["newsai*"]
